--- a/page1.css
+++ b/page1.css
@@ -15,6 +15,10 @@ img
 	float: right;
 	border-radius: 10px;
 }
+img:hover
+{
+	transform: scale(1.05);
+}
 #centre
 {
 	text-align: center;
@@ -34,10 +38,19 @@ p
 {
     font-family: arial;
 	color:black;
+	width: 800px;
+	/*box-shadow: 0 0 5px rgba(0,0,0,0.5)*/
+}
+p:hover
+{
+	transform: scale(1.05);
 }
 body
 {
-	background-image: url("background.jpeg");
+	background-image: url("black-wallpaper-12.jpg");
+	background-repeat: no-repeat;
+	/*background: rgb(28,24,23);
+background: radial-gradient(circle, rgba(28,24,23,0.7035189075630253) 0%, rgba(0,0,0,0.5830707282913166) 100%);*/
 }
 #intro
 {
@@ -47,7 +60,7 @@ body
 	display: block;
 	word-spacing: 5px;
 	letter-spacing: 1px;
-
+	
 }
 h1
 {
@@ -58,7 +71,7 @@ h1
 	font-weight: bold;
 	font-size: large;
 	color: white;
-	
+	direction: ltr;
 }
 #a
 {
@@ -92,23 +105,51 @@ h1
     border-radius: 20px;
     width: 200px;
 }
-#e
-{
-	background: none;
-    padding: 5px;
-    border:3px dotted orange;
-    border-radius: 20px;
-    width: 165px;
-}
 ol
 {
 	color:white;
 }
+li
+{
+	width: 150px;
+}
+li:hover
+{
+	transform: scale(1.1);
+	transform: translate(10px,0px);
+}
 a
 {
 	color: white;
+	width: 50px;
 }
 a:hover
 {
 	color:orange;
+	cursor: pointer;
+}
+body
+{
+	margin: 20px 25px
+}
+#runner
+{
+	width: 20px;
+	height: 20px;
+	background-color: orange;
+	position: relative;
+	animation-name: anime;
+	animation-duration: 15s;
+	animation-delay: 2s;
+	border:2px solid white;
+	animation-iteration-count: 100;
+	border-radius: 7px;
+}
+@keyframes anime
+{
+	0% {background-color: orange; left: -20px; top: -97px;  }
+	25% {background-color: black; left: 1300px; top: -97px;  }
+	50% {background-color: yellow; left: 1300px; top: 960px;  }
+	75% {background-color: blue; left: -20px; top: 960px;  }
+	100% {background-color: red; left: -20px; top: -97px;  }
 }
