--- a/page1.css
+++ b/page1.css
@@ -47,7 +47,7 @@ p:hover
 }
 body
 {
-	background-image: url("black-wallpaper-12.jpg");
+	background-image: url("https://github.com/anirudhsuresh522001/Anirudh-Suresh/blob/main/black-wallpaper-12.jpg");
 	background-repeat: no-repeat;
 	/*background: rgb(28,24,23);
 background: radial-gradient(circle, rgba(28,24,23,0.7035189075630253) 0%, rgba(0,0,0,0.5830707282913166) 100%);*/
